tests/expected_invalid_generic_affine_duplicate.diag.out
<input>:4:5: error: affine value 'value' was already moved
        value
        ^^^^^
<input>:3:16: note: 'value' was previously moved here
        let copy = value;
                   ^^^^^
